# Learning-CMake

./: CMakeLists.txt  bruh.cpp  bruh.h  bruhtest.cpp  main2.cpp
lib/: CMakeLists.txt  bruh.cpp  bruh.h
